solution-hw1/style.css
hr {
    height:5px;
    border-width:0;
    background-color:black;
  }

h2 {
    font-size: 18px;
    font-family: 'verdana';
    font-weight: lighter;
}

h3 {
    font-size: 20px;
    font-family: 'verdana';
    font-weight: lighter;
}

h4 {
    font-size: 18px;
    font-family: 'verdana';
    font-weight: lighter;
}

h5 {
    font-size: 10px;
    font-family: 'verdana';
    font-weight: lighter;
}

p {
    font-size: 18px;
    font-family: 'verdana';
    font-weight: lighter;
}


a:hover {
    background-color: yellow;
    font-style: 'bold'
  }

  a:link, a:visited {
    color: black;
    padding: 5px 5px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
  }
  
 a:hover, a:active {
    background-color: yellow;
    font-weight: bold;
  }

img {
    border: 2px solid black;
  }

